# labkeeper

./: .gitignore  README.md  README.rst  ansible.cfg  deploy.py  deploy.sh  deploy_new_slave.sh  requirements.txt  setup.cfg  setup.sh
badge/: badge.py
badge/check/: badge_check.sh  setup_by_systemd.sh
badge/server/: badge.py
config/: README.rst  sources.list
config/apache/: zuul-web.conf  zuul-web.conf.j2
config/fail2ban/: apache-modsecurity.conf  jail.local
config/nodepool/: allinone-clouds.yaml  allinone-clouds.yaml.j2  allinone-nodepool.yaml.j2  clouds-secrets.yaml  clouds.yaml  nodepool.yaml.j2  openlab-clouds.yaml  openlab-clouds.yaml.j2  openlab-nodepool.yaml.j2
config/zuul/: allinone-main.yaml  allinone-openlab-zuul-jobs.pem  github_access_token_file  liu-openlab-ci.pem  main.yaml  openlab-main.yaml  (+5 more)
etc/: README.rst
ha_healthchecker/: README.md  requirements.txt  setup.cfg
ha_healthchecker/ha_healthchecker/: cli.py  github.py  process.py
ha_healthchecker/ha_healthchecker/action/: base.py  fixer.py  refresher.py  switcher.py
inventory/: README.rst  allinone  allinone-ha-deploy.yaml  allinone-ha.yaml  allinone.yaml  hosts  inventory.py  openlab-ha-allinone.yaml  openlab-ha.yaml  openlab-new-slave.yaml  openlab.yaml  products  products.yaml  test-allinone-ha.yaml  test-allinone.yaml  test.yaml
labcheck/: lab_check_report.sh
labchecker/: README.md  labcheck.py  utils.py
labsync/: modify_files.py  nodepool_files_sync.sh  sync_prepare.sh  zuul_files_sync.sh
openlabcmd/: README.md  requirements.txt  setup.cfg  setup.py
openlabcmd/etc/: openlab.conf
openlabcmd/openlabcmd/: cli.py  constants.py  exceptions.py  hint.py  node.py  repo.py  service.py  utils.py  zk.py
openlabcmd/openlabcmd/plugins/: __init__.py  base.py  constants.py  recover.py
openlabcmd/openlabcmd/plugins/jobs/: __init__.py  image.py
openlabcmd/openlabcmd/plugins/nodepool/: __init__.py  auth.py  flavor.py  network.py  orphanresource.py  quota.py  router.py  securitygroup.py
playbooks/: allinone.yaml  apache.yaml  bastion.yaml  bootstrap.yaml  check-nodepool-periodic.yaml  check-securitygroup.yaml  check-web-badge-periodic.yaml  conf-cluster.yaml  conf-new-slave.yaml  conf-new-zookeeper.yaml  config-mysql.yaml  force-to-enable-services.yaml  gearman-apt.yaml  ha_healthchecker.yaml  ha_log_cfg_sync.yaml  ha_mysql_configure.yaml  ha_openlabcmd_install.yaml  ha_service_install.yaml  healthchecker.yaml  install-gearman-apt.yaml  keepalive.yaml  keepalived.yaml  mysql.yaml  nodepool-builder.yaml  nodepool-launcher.yaml  nodepool.yaml  post-config.yaml  post.yaml  pre-deployment.yaml  prerequisites.yaml  site.yaml  start-ha-slave-services.yaml  start-slave.yaml  statsd.yaml  switch_role.yaml  sync-config-files.yaml  upgrade-complete-ha-deployment.yaml  upgrade-ha-deployment.yaml  upgrade-zuul.yaml  zookeeper.yaml  (+7 more)
tools/: install_requirements.sh  requirements.yaml
(+102 files in other folders)
