[metadata]
name = openlabcmd
summary = The command line tool for OpenLab
description-file =
    README.md
author = OpenLab Team
home-page = https://openlabtesting.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    openlab = openlabcmd.cli:main

[wheel]
universal = 1
