[metadata]
name = openlabcmd
summary = The command line tool for OpenLab
description-file =
    README.md
author = OpenLab Team
home-page = https://openlabtesting.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[pbr]
warnerrors = True

[files]
data_files =
    etc/openlab = etc/openlab.conf

[entry_points]
console_scripts =
    openlab = openlabcmd.cli:main

[wheel]
universal = 1
