[metadata]
name = openlabcmd
summary = The command line tool for OpenLab
description-file =
    README.md
long_description_content_type = text/markdown
author = OpenLab Team
home-page = https://openlabtesting.org/
python-requires = >=3.5
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[pbr]
warnerrors = True

[files]
data_files =
    etc/openlab = etc/openlab.conf

[entry_points]
console_scripts =
    openlab = openlabcmd.cli:main

[wheel]
universal = 1
